# Yandex.Wordstat-parser

./: .gitignore  LICENSE  README.md  WordStatAPI.py  __init__.py  example.py  wsparser.py
python_package/: LICENSE  setup.cfg
python_package/src/YandexWordStatAPI/: WordStatAPI.py  WordstatAPI.py  __init__.py
python_package/src/YandexWordStatAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
