[metadata]
name = YandexWordStatAPI
version = 0.0.1
author = Foxdogface and igor-kantor
description = Simple class for parsing data from WordStat via yandex direct api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Foxdogface/YandexWordstatAPI
project_urls =
    Bug Tracker = https://github.com/Foxdogface/YandexWordstatAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src